--- a/templates/stop_playlist.html
+++ b/templates/stop_playlist.html
@@ -5,12 +5,12 @@
     <h2>Lecture des bandes annonces arretee</h2>
     </div>
     <div class="paragraphe">
-        <form action="{% url_for('shutdown_pc') %}">
+        <form action="{{ url_for('shutdown_pc') }}">
             <button class="big_button" type="submit">Arreter le PC</button>
         </form>
     </div>
     <div class="paragraphe">
-        <form action="{% url_for('index') %}">
+        <form action="{{ url_for('index') }}">
             <button class="big_button" type="submit">Page d'accueil</button>
         </form>
     </div>
