site web: css change

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,19 +1,25 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <div class="paragraphe">
     {% if stop %}
+    <div class="paragraphe">
         <h2 class="blue">Les bande annonces sont arrêtées</h2>
+    </div>
+    <div class="paragraphe">
         <form action="{{ url_for('launch_playlist_all_prog') }}">
             <button class="big_button" type="submit">Jouer les bandes annonces</button>
         </form>
+    </div>
     {% else %}
+    <div class="paragraphe">
         <h2 class="blue">Les bande annonces sont en cours de diffusion</h2>
+    </div>
+    <div class="paragraphe">
         <form action="{{ url_for('stop_playlist') }}">
             <button class="big_button" type="submit">Arrêter les bandes annonces</button>
         </form>
-    {% endif %}
     </div>
+    {% endif %}
 
 {% endblock %}
   
