--- a/static/bande_annonce.css
+++ b/static/bande_annonce.css
@@ -12,9 +12,10 @@ body {
 }
 
 button.big_button {
-    font-size: 150%;
+    font-size: 120%;
     color: #000000;
-    padding:  30px 30px 30px 30px;
+    padding:  10px 10px 10px 10px;
+    margin-left: 30px;
 }
 
 h2, h3 {
