--- a/templates/stop_playlist.html
+++ b/templates/stop_playlist.html
@@ -1,9 +1,10 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <div class="paragraphe white">
-    <h2>Lecture des bandes annonces arretee</h2>
+    <div class="paragraphe">
+        <h2 class="blue">Lecture des bandes annonces arretee</h2>
     </div>
+    <div class="paragraphe">
         <form action="{{ url_for('index') }}">
             <button class="big_button" type="submit">Page d'accueil</button>
         </form>
@@ -13,5 +14,4 @@
             <button class="big_button" type="submit">Arreter le PC</button>
         </form>
     </div>
-    <div class="paragraphe">
 {% endblock %}
