--- a/templates/show_playlist.html
+++ b/templates/show_playlist.html
@@ -3,7 +3,7 @@
 {% block content %}
 
     <div class="paragraphe">
-        <h2 class="blue">playlist en cours::</h2>
+        <h2 class="blue">playlist en cours:</h2>
         {% for content in playlist %}
             <p class="white align_left">{{ content }}</p>
         {% endfor %}
