Mise à jour du titre Web.

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <header>
-        <title>Etoile Cinema</title>
+        <title>Le Chateaubriand - Cin&eacute;ma de Combourg</title>
         <link rel="stylesheet" type=text/css href="{{ url_for('static', filename='bande_annonce.css') }}">
     </header>
     <body>
